white margin on mobile bug fix

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -8,11 +8,15 @@ $gridGap: 1rem;
 html,
 body {
   overflow-x: hidden;
+  width: 100%;
+  max-width: 100%;
 }
 
 .grid-wrap {
   margin: 0;
   padding: 0;
+  width: 100%;
+  max-width: 100%;
 }
 
 .grid {
