--- a/styles/menu.scss
+++ b/styles/menu.scss
@@ -8,6 +8,7 @@
   align-items: center;
   font-size: 1.2rem;
   width: 100%;
+  max-width: 100%;
   position: fixed;
   top: 0;
   z-index: 999;
@@ -164,6 +165,7 @@
     padding-top: 3rem;
     padding-bottom: 10rem;
     width: 100%;
+    max-width: 100%;
     height: 92vh;
     position: absolute;
     top: 60px;
